spade-tests/src/snapshots/spade_tests__hir_lowering__argument_list_tests__named_struct_patterns_errors_if_missing_multiple_bindings.snap
---
source: spade-tests/src/hir_lowering.rs
expression: "std::str::from_utf8(buffer.as_slice()).expect(\"error contains invalid utf-8\")"
---
error: Missing arguments: a, b
  ┌─ testinput:4:10
  │
4 │     Test$()
  │          ^^ Missing arguments: a, b


